<resources>
    <string name="app_name">Cracker</string>
    <string name="text_view">Please fill out your most personal details</string>
    <string name="question1">What is your name?</string>
    <string name="question2">What is your email?</string>
    <string name="question3">What is your age?</string>
    <string name="submit">Submit</string>
    <string name="get_started">Get Started!</string>
    <string name="profile">Profile:...</string>
    <string name="food_input">Input your food here!</string>
    <string name="save_food">Save food!</string>
    <string name="food_type">Enter your food</string>
    <string name="calories">Enter the calories</string>
    <string name="meal_choice">Which meal was this for?</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="title_activity_data_list">DataListActivity</string>
</resources>
