<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/food_type"
        android:hint="@string/food_type"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/calories"
        android:hint="@string/calories"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal_choice"
        android:textSize="30dp"
        android:layout_marginTop="50dp"/>

    <Spinner
        android:id="@+id/meal_choice"
        android:layout_height="wrap_content"
        android:prompt="@string/meal_choice"
        android:layout_width="fill_parent"
        android:entries="@array/mealchoice">
    </Spinner>

    <Button
        android:id="@+id/save_food"
        android:text="@string/save_food"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addFood"/>
</LinearLayout>